@@ -1,17 +1,19 @@
 package com.taskflowproject.taskflow.service;
 
-import com.taskflowproject.taskflow.dto.CreationProjectDTO;
 import com.taskflowproject.taskflow.dto.ProjectDTO;
+import com.taskflowproject.taskflow.dto.CreationProjectDTO;
 import com.taskflowproject.taskflow.model.*;
-import com.taskflowproject.taskflow.repository.ProjectRepository;
-import com.taskflowproject.taskflow.repository.UserRepository;
-import org.springframework.stereotype.Service;
-import org.springframework.web.server.ResponseStatusException;
-import org.springframework.http.HttpStatus;
-
-import jakarta.transaction.Transactional;
+import com.taskflowproject.taskflow.repository.*;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
+import org.springframework.http.HttpStatus;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.server.ResponseStatusException;
+
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class ProjectService {
@@ -22,93 +24,109 @@ public class ProjectService {
     @Autowired
     private UserRepository userRepository;
 
-    @Transactional
-    public ProjectDTO createProject(CreationProjectDTO dto) {
+    @Autowired
+    private RoleRepository roleRepository;
 
+    @Autowired
+    private ProjectMemberRepository projectMemberRepository;
+
+    @Transactional
+    @CacheEvict(value = "projects", allEntries = true)
+    public ProjectDTO createProject(CreationProjectDTO dto) {
         User manager = userRepository.findById(dto.managerId())
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "Gerente não encontrado."));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Gerente Não Encontrado."));
 
         Project project = new Project();
         project.setName(dto.name());
         project.setDescription(dto.description());
-        project.setStart_date(dto.startDate());
-        project.setEnd_date(dto.endDate());
+        project.setStartDate(dto.startDate());
+        project.setEndDate(dto.endDate());
+        project.setStatus(dto.status());
         project.setManager(manager);
 
-        project.setStatus(dto.status());
+        Project savedProject = projectRepository.save(project);
 
-        projectRepository.save(project);
+        Role gerenteRole = roleRepository.findByName("GERENTE")
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "A função GERENTE não foi encontrada, Cadastre-a primeiro!"));
 
-        return new ProjectDTO(
-                project.getProject_id(),
-                project.getName(),
-                project.getDescription(),
-                project.getStart_date(),
-                project.getEnd_date(),
-                project.getStatus().name(),
-                project.getManager().getUser_id()
-        );
+        ProjectMember membership = new ProjectMember();
+        membership.setProject(savedProject);
+        membership.setUser(manager);
+        membership.setRole(gerenteRole);
+        projectMemberRepository.save(membership);
+
+        return mapToDTO(savedProject);
     }
 
-    public List<ProjectDTO> listProjects() {
+    @Cacheable(value = "projects")
+    public List<ProjectDTO> listProjectsForUser(Long userId) {
         return projectRepository.findAll().stream()
-                .map(p -> new ProjectDTO(
-                        p.getProject_id(),
-                        p.getName(),
-                        p.getDescription(),
-                        p.getStart_date(),
-                        p.getEnd_date(),
-                        p.getStatus().name(),
-                        p.getManager().getUser_id()
-                ))
-                .toList();
+                .map(this::mapToDTO)
+                .collect(Collectors.toList());
     }
 
-    @Transactional
+    @Cacheable(value = "projects", key = "#id")
     public ProjectDTO getProjectById(Long id) {
         Project project = projectRepository.findById(id)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Projeto não encontrado."));
-        return new ProjectDTO(
-                project.getProject_id(),
-                project.getName(),
-                project.getDescription(),
-                project.getStart_date(),
-                project.getEnd_date(),
-                project.getStatus().name(),
-                project.getManager().getUser_id()
-        );
+        return mapToDTO(project);
     }
 
     @Transactional
+    @CacheEvict(value = "projects", allEntries = true)
     public ProjectDTO updateProject(Long id, CreationProjectDTO dto) {
         Project project = projectRepository.findById(id)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Projeto não encontrado."));
 
-        User manager = userRepository.findById(dto.managerId())
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "Gerente não encontrado."));
-
         project.setName(dto.name());
         project.setDescription(dto.description());
-        project.setStart_date(dto.startDate());
-        project.setEnd_date(dto.endDate());
-        project.setManager(manager);
+        project.setStartDate(dto.startDate());
+        project.setEndDate(dto.endDate());
         project.setStatus(dto.status());
 
-        return new ProjectDTO(
-                project.getProject_id(),
-                project.getName(),
-                project.getDescription(),
-                project.getStart_date(),
-                project.getEnd_date(),
-                project.getStatus().name(),
-                project.getManager().getUser_id()
-        );
+        return mapToDTO(projectRepository.save(project));
     }
 
     @Transactional
+    @CacheEvict(value = "projects", allEntries = true)
     public void deleteProject(Long id) {
         Project project = projectRepository.findById(id)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Projeto não encontrado."));
+
+        projectMemberRepository.deleteByProject(project);
         projectRepository.delete(project);
+    }
+
+    @Transactional
+    @CacheEvict(value = "projects", allEntries = true)
+    public void addMemberToProject(Long projectId, Long userId) {
+        Project project = projectRepository.findById(projectId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Projeto não encontrado ID: " + projectId));
+
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Usuário não encontrado ID: " + userId));
+
+        Role userRole = roleRepository.findByName("GERENTE")
+                .orElseGet(() -> roleRepository.findAll().stream().findFirst()
+                        .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "Nenhuma Role cadastrada no banco!")));
+
+        ProjectMember member = new ProjectMember();
+        member.setProject(project);
+        member.setUser(user);
+        member.setRole(userRole);
+
+        projectMemberRepository.save(member);
+    }
+
+    private ProjectDTO mapToDTO(Project project) {
+        return new ProjectDTO(
+                project.getProjectId(),
+                project.getName(),
+                project.getDescription(),
+                project.getStartDate(),
+                project.getEndDate(),
+                project.getStatus().name(),
+                project.getManager().getUserId()
+        );
     }
 }
